fml/tests/snapshots/log_pane_scrollbar__fuzzy_scan_progress_renders_in_log_pane_title.snap
---
source: fml/tests/log_pane_scrollbar.rs
assertion_line: 117
expression: render_app(&mut app)
---
┏ FML [SEARCH] | Store 1K/1M | SCAN 256┓┌ Info ────────────────────────────────┐
┃  1 INFO src-a entry 1                ┃│No log selected                       │
┃  2 INFO src-a entry 2                ┃│                                      │
┃  3 INFO src-a entry 3                ┃│                                      │
┃  4 INFO src-a entry 4                ┃│                                      │
┃> 5 INFO src-a entry 5                ┃│                                      │
┃                                      ┃└──────────────────────────────────────┘
┃                                      ┃┌ Preview [ SURROUNDING ] ─────────────┐
┃                                      ┃│No log selected                       │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                      │
┌ Query ───────────────────────────────┐│                                      │
│>  Enter a query...                   ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 Quit <ctrl+c> | Help <?> | Search <enter>                               v0.6.0
