fml/tests/snapshots/log_pane_scrollbar__scrollbar_hides_when_retained_content_fits.snap
---
source: fml/tests/log_pane_scrollbar.rs
expression: render_app(&mut app)
---
┏ FML [TAIL] | Store 5/1M ━━━━━━━━━━━━━┓┌ Info ────────────────────────────────┐
┃  1 INFO src-a entry 1                ┃│No log selected                       │
┃  2 INFO src-a entry 2                ┃│                                      │
┃  3 INFO src-a entry 3                ┃│                                      │
┃  4 INFO src-a entry 4                ┃│                                      │
┃> 5 INFO src-a entry 5                ┃│                                      │
┃                                      ┃└──────────────────────────────────────┘
┃                                      ┃┌ Preview [ SURROUNDING ] ─────────────┐
┃                                      ┃│No log selected                       │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                      │
┌ Query ───────────────────────────────┐│                                      │
│>  Enter a query...                   ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 Quit <ctrl+c> | Help <?> | Search </>                                   v0.5.0
