fml/tests/snapshots/log_pane_scrollbar__scrollbar_renders_at_bottom_of_retained_window.snap
---
source: fml/tests/log_pane_scrollbar.rs
expression: render_app(&mut app)
---
┏ FML [TAIL] | Store 20/1M ━━━━━━━━━━━━┓┌ Info ────────────────────────────────┐
┃  3 INFO src-a entry 3                ▲│No log selected                       │
┃  4 INFO src-a entry 4                ││                                      │
┃  5 INFO src-a entry 5                █│                                      │
┃  6 INFO src-a entry 6                █│                                      │
┃  7 INFO src-a entry 7                █│                                      │
┃  8 INFO src-a entry 8                █└──────────────────────────────────────┘
┃  9 INFO src-a entry 9                █┌ Preview [ SURROUNDING ] ─────────────┐
┃  10 INFO src-a entry 10              █│No log selected                       │
┃  11 INFO src-a entry 11              █│                                      │
┃  12 INFO src-a entry 12              █│                                      │
┃  13 INFO src-a entry 13              ││                                      │
┃  14 INFO src-a entry 14              ││                                      │
┃  15 INFO src-a entry 15              ││                                      │
┃  16 INFO src-a entry 16              ││                                      │
┃  17 INFO src-a entry 17              ││                                      │
┃  18 INFO src-a entry 18              ││                                      │
┃  19 INFO src-a entry 19              ││                                      │
┃> 20 INFO src-a entry 20              ▼│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                      │
┌ Query ───────────────────────────────┐│                                      │
│>  Enter a query...                   ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 Quit <ctrl+c> | Help <?> | Search </>                                   v0.4.0
