fml/tests/snapshots/log_pane_scrollbar__scrollbar_renders_in_the_middle_of_retained_window.snap
---
source: fml/tests/log_pane_scrollbar.rs
assertion_line: 275
expression: render_app(&mut app)
---
┏ FML [HISTORY] | Store 20/1M ━━━━━━━━━┓┌ Info ────────────────────────────────┐
┃  1 INFO src-a entry 1                ▲│No log selected                       │
┃  2 INFO src-a entry 2                ││                                      │
┃  3 INFO src-a entry 3                ││                                      │
┃  4 INFO src-a entry 4                ││                                      │
┃  5 INFO src-a entry 5                ││                                      │
┃  6 INFO src-a entry 6                █└──────────────────────────────────────┘
┃  7 INFO src-a entry 7                █┌ Preview [ SURROUNDING ] ─────────────┐
┃  8 INFO src-a entry 8                █│No log selected                       │
┃  9 INFO src-a entry 9                █│                                      │
┃> 10 INFO src-a entry 10              █│                                      │
┃  11 INFO src-a entry 11              █│                                      │
┃  12 INFO src-a entry 12              █│                                      │
┃  13 INFO src-a entry 13              █│                                      │
┃  14 INFO src-a entry 14              ││                                      │
┃  15 INFO src-a entry 15              ││                                      │
┃  16 INFO src-a entry 16              ││                                      │
┃  17 INFO src-a entry 17              ││                                      │
┃  18 INFO src-a entry 18              ▼│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                      │
┌ Query ───────────────────────────────┐│                                      │
│>  Enter a query...                   ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 Quit <ctrl+c> | Help <?> | Search <enter>                               v0.6.0
